syntax = "proto3";
package Protocol;
option java_package = "com.cat.server.game.data.proto";
option java_outer_classname = "PBMail";

import "PBItem.proto";

// 请求删除邮件
message AckMailDelete{
    int32 code = 1;  //错误码
    repeated int64 mailIds = 2;  //mail ids
}

// 获取邮件附件
message ReqMailReward{
    int64 mailId = 1;  //mailId,-1表示所有
}

// 邮件列表
message AckMailList{
    repeated PBMailInfo mails = 1;  //
}

// 请求读取邮件
message ReqMailRead{
    int64 mailId = 1;  //Mail id
}

// 邮件对象
message PBMailInfo{
    int32 mailId = 1;  //邮件id
}

// 响应读取邮件
message AckMailRead{
    int32 code = 1;  //错误码,非0表示弹提示
}

// 请求邮件列表
message ReqMailList{
}

// 响应领取附件
message AckMailReward{
    int32 code = 1;  //错误码,非0表示弹提示
    repeated PBPairInfo rewards = 2;  //奖励
}

// 请求删除邮件
message ReqMailDelete{
    int64 mailId = 1;  //mail ids
}

